# pocketbase-sdk-rust

./: .gitignore  Cargo.toml  README.md  TODO.org
.github/workflows/: rust.yml
examples/: collections.rs  healthcheck.rs  logs.rs  records.rs  simple.rs
pb_data/: data.db  logs.db
pb_data/storage/_pb_users_auth_/dzpby1h7m4p0ffo/: 8bitdev_knidaIDT1E.png.attrs
pb_data/storage/_pb_users_auth_/dzpby1h7m4p0ffo/thumbs_8bitdev_knidaIDT1E.png/: 100x100_8bitdev_knidaIDT1E.png.attrs
pb_migrations/: 1681946444_created_posts.js  1681946471_updated_posts.js  1681948955_created_admins.js  1681948968_deleted_admins.js
pocketbase-derive/: Cargo.toml  README.md
pocketbase-derive/src/: lib.rs
src/: admin.rs  client.rs  collections.rs  errors.rs  httpc.rs  lib.rs  logs.rs  records.rs  types.rs
src/admin/: mod.rs
src/admins/: auth.rs  mod.rs
src/client/: auth.rs  base.rs  mod.rs
src/records/: changeset.rs  collection.rs  mod.rs  operations.rs
src/records/operations/: create.rs  delete.rs  list.rs  mod.rs  update.rs  view.rs
src/records/sync_operations/: mod.rs  sync_create.rs  sync_delete.rs  sync_list.rs  sync_update.rs  sync_view.rs
src/user/: mod.rs
src/users/: auth.rs  mod.rs
tests/: admin_auth.rs  authenticate_admin.rs  authenticate_record.rs  client_authentication.rs  collections.rs  list_records.rs  mod.rs  records.rs  test_record_create.rs  test_records_list.rs  test_records_update.rs  test_records_view.rs  user_auth.rs
tests/async_client/: test_auth_admin.rs
tests/async_record/: test_records_list.rs
tests/client/: mod.rs  test_auth_admin.rs  test_auth_register.rs  test_auth_user.rs
tests/common/: mod.rs
tests/record/: mod.rs  test_record_create.rs  test_records_delete.rs  test_records_list.rs  test_records_update.rs  test_records_view.rs
tests/sync_client/: test_auth_admin.rs  test_auth_user.rs
tests/sync_record/: test_record_create.rs  test_records_delete.rs  test_records_list.rs  test_records_update.rs  test_records_view.rs
