[package]
name        = "pocketbase-sdk"
version     = "0.0.5"
edition     = "2021"
authors     = ["Sreedev Kodichath <sreedev@icloud.com>"]
license     = "MIT"
description = "WebAsm Compatible Pocketbase SDK"
readme      = "README.md"
homepage    = "https://github.com/sreedevk/pocketbase-sdk-rust"
categories  = ["development-tools"]
keywords    = [
  "pocketbase",
  "pocketbase-sdk",
  "rust-pocketbase",
  "pocketbase-rs"
]


[dependencies]
log                   = "0.4.17"
serde                 = { version = "1.0.145", features = ["derive"] }
serde_json            = "1.0.85"
surf                  = { version = "2.3.2", features = ["wasm-client"] }
thiserror = "1.0.37"
url                   = "2.3.1"

[dev-dependencies]
httpmock              = "0.6"
tokio                 = { version = "1", features = ["full"] }
