[package]
name        = "pocketbase-sdk"
version     = "0.1.1"
edition     = "2021"
authors     = ["Sreedev Kodichath <sreedev@icloud.com>", "CubeCoder <markus.hamacher16@gmail.com>"]
license     = "MIT"
description = "Pocketbase SDK"
readme      = "README.md"
homepage    = "https://github.com/sreedevk/pocketbase-sdk-rust"
categories  = ["development-tools"]
keywords    = [
  "pocketbase",
  "pocketbase-sdk",
  "rust-pocketbase",
  "pocketbase-rs"
]

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
ureq = { version = "2.6.2", features = ["json", "charset"] }
url = "2.3.1"

[dev-dependencies]
httpmock = "0.6"
